# use-sqs

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
src/use_sqs/: __init__.py  use_sns.py  use_sqs.py
src/use_templete/: __init__.py
tests/: test_basic.py  test_sns.py
