
[project]
name = "use-template"
version = "0.1.0"
description = "this is a template library"
readme = "README.md"
authors = [
    { name = "miclon", email = "jcnd@163.com" }
]
requires-python = ">=3.8"
dependencies = [
    "typing-extensions>=4.1.0",
]

[project.optional-dependencies]
test = ["pytest>=7.0.0", "pytest-asyncio>=0.21.0"]

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"
