
[project]
name = "use-sqs"
version = "0.1.0"
description = "A library for using AWS SQS and SNS"
readme = "README.md"
authors = [
    { name = "miclon", email = "jcnd@163.com" }
]
requires-python = ">=3.8"
dependencies = [
    "boto3>=1.37.38",
    "typing-extensions>=4.1.0",
]

[project.optional-dependencies]
test = ["pytest>=7.0.0", "pytest-asyncio>=0.21.0"]

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[tool.ruff]
ignore = [
    "E501", # line too long, handled by black
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.hatch.build.targets.wheel]
packages = ["src/use_sqs"]

[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
